[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "tps-balancer"
version = "0.1.0"
description = "AI-Powered TPS Balancing System"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "torch>=1.10.0",
    "stable-baselines3>=1.6.0",
    "gym>=0.26.0",
    "tensorflow>=2.7.0"
]