[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "tps-balancer"
version = "0.1.0"
description = "AI-Powered TPS Balancing System"
authors = [{name = "Claudinei Caetano de Souza", email = "claudineicaetano@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL-3.0 license",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "mypy", "black"]