[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "tps-balancer"
version = "0.1.0"
description = "AI-Powered TPS Balancing System"
authors = [
    { name = "Claudinei Caetano de Souza", email = "claudineicaetano@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL-3.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.21.0",
    "torch>=1.10.0",
    "stable-baselines3>=1.6.0",
    "gym>=0.26.0",
    "tensorflow>=2.7.0",
    "python-dotenv>=0.19.0",
]


[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "mypy",
    "black"
]
